# sauron-native

./: .gitlab-ci.yml  .gitmodules  .travis.yml  Cargo.toml  LICENSE-APACHE  NOTICE.md  Notes.md  README.md  REAMDE.md  TODO.md  test-browser.sh  test.sh
crates/browser/: Cargo.toml  README.md
crates/browser/examples/: simple_app.rs  simple_builder.rs
crates/browser/examples/simple_app/: Cargo.toml  index.html
crates/browser/examples/simple_app/src/: lib.rs
crates/browser/src/: dom.rs  html.rs  lib.rs  svg.rs  util.rs
crates/browser/src/dom/: apply_patches.rs
crates/browser/src/html/: attributes.rs  events.rs
crates/browser/src/svg/: attributes.rs
crates/browser/tests/: children.rs  create_element.rs  diff_patch.rs  dom_updater_test.rs  event.rs
crates/html-backend/: Cargo.toml
crates/html-backend/examples/: simple_app.rs  simple_builder.rs
crates/html-backend/src/: lib.rs
crates/itui/: Cargo.toml  README.md
crates/itui/src/: buffer.rs  symbols.rs
crates/itui/src/widgets/: block.rs  button.rs  list.rs  mod.rs  paragraph.rs  table.rs  tabs.rs
crates/itui/tests/: paragraph.rs
crates/sauron-widget/: Cargo.toml
crates/sauron-widget/src/: lib.rs  widget.rs
crates/sauron-widget/src/widget/: attribute.rs  builder.rs  event.rs  layout.rs
crates/sauron-widget/src/widget/attribute/: util.rs  value.rs
crates/ui-backend/: Cargo.toml  README.md
crates/ui-backend/examples/: simple_app.rs  simple_builder.rs
crates/ui-backend/src/: dom.rs  html.rs  lib.rs
crates/ui-backend/src/dom/: apply_patches.rs
crates/ui-backend/src/html/: attributes.rs  dom_node.rs  events.rs
crates/ui-orbtk/: Cargo.toml  README.md
crates/ui-orbtk/examples/: minimal.rs
crates/vdom/: Cargo.toml
crates/vdom/examples/: simple.rs
crates/vdom/src/: diff.rs  lib.rs  patch.rs  view.rs  vnode.rs
crates/vdom/src/vnode/: builder.rs  event.rs  value.rs
crates/virtual-dom/: Cargo.toml
crates/virtual-dom/examples/: any.rs  simple.rs
crates/virtual-dom/src/: callback.rs  diff.rs  lib.rs  patch.rs  util.rs  view.rs  vnode.rs
crates/virtual-dom/src/vnode/: builder.rs  mod.rs  value.rs
crates/virtual-dom/tests/: lib.rs
examples/: browser_widget.rs  cross_widget.rs  diff_widget.rs  tui_backend.rs
examples/cross_widget/: Cargo.toml  cross_build_win.sh  cross_run_win.sh  index.html  run_gtk.sh  run_nwg.bat  run_terminal.sh  run_web.sh  rust-toolchain  start_web.sh
examples/cross_widget/src/: app.rs  lib.rs  main.rs  store.rs
examples/cross_win/: Cargo.toml  run_nwg.bat  start_web.sh
examples/cross_win/src/: app.rs  lib.rs  main.rs
examples/isomorphic/client/: Cargo.toml  bootstrap.sh  build-wasm.prod.sh  build-wasm.sh  copy_files.sh  start.sh
examples/isomorphic/client/src/: app.rs  global.rs  lib.rs
examples/isomorphic/client/src/app/: store.rs
examples/isomorphic/client/static/: index.html
examples/simple/: Cargo.toml  cross_run_win.sh  index.html  run_gtk.sh  run_titik.sh  start_web.sh
examples/simple/src/: app.rs  lib.rs  main.rs
examples/todomvc/: Cargo.toml  bootstrap_win.sh  index.html  run_titik_nolog.sh  run_web.sh  start-debug-mode.sh  start-release-mode.sh
examples/todomvc/src/: app.rs  lib.rs  main.rs
examples/win_ui/: Cargo.toml
examples/win_ui/src/: main.rs
src/: app.rs  backend.rs  component.rs  image_util.rs  layout.rs  lib.rs  program.rs  util.rs  widget.rs
src/backend/: gtk_ui.rs  html.rs  nwg_ui.rs  text_ui.rs  titik_ui.rs  tui.rs  web_ui.rs
src/backend/gtk_ui/: apply_patches.rs  convert_widget.rs  images.rs
src/backend/html/: convert_event.rs  convert_widget.rs
src/backend/text_ui/: events.rs  nodes.rs
src/backend/titik_ui/: apply_patches.rs  convert_event.rs  convert_widget.rs
src/backend/web_ui/: convert_widget.rs
src/widget/: attribute.rs  builder.rs  control.rs  event.rs  layout.rs
src/widget/attribute/: event.rs  util.rs  value.rs
src/widgets/: mod.rs
