[package]
name = "sauron-native"
version = "0.1.0"
authors = [ "Jovansonlee Cesar <ivanceras@gmail.com>" ]
license = "MIT"
description = "Truly native, truly cross platform GUI framework for rust"
repository = "https://github.com/ivanceras/sauron-native"
documentation = "https://docs.rs/sauron-native"
readme = "README.md"
keywords = ["gui", "native", "gtk", "windows"]
edition = "2018"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
#sauron = { version = "0.22.2", optional = true}
sauron = { version = "0.22.2", optional = true, path = "../sauron" }
#sauron_vdom = { version = "0.22.2"}
sauron_vdom = { version = "0.22.2", path = "../sauron/crates/sauron_vdom" }
itui = { path = "crates/itui", optional = true, use-default-feautures = false }
termion = { version = "1.5", optional= true }
wasm-bindgen = { version = "0.2.42", optional = true }
gtk = { version = "0.6.0", optional = true }
gio = { version = "0.6.0", optional = true }
glib = { version = "0.7.0", optional = true }
gdk-pixbuf = { version = "0.6.0", optional = true }
log = "0.4"
base64 = "0.11.0"
image = "0.23.0"
console_log = { version = "0.1.2", optional = true }
native-windows-gui = { git = "https://github.com/gabdube/native-windows-gui", branch = "1.0-prerelease", optional = true , features = ["image-decoder"]}
titik = { path = "../titik", optional = true }

[dependencies.web-sys]
version = "0.3.19"
optional = true
features = [
    "Comment",
    "console",
    "Document",
    "Element",
    "Event",
    "HtmlElement",
    "EventTarget",
    "KeyboardEvent",
    "InputEvent",
    "HtmlCollection",
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "MouseEvent",
    "Node",
    "NodeList",
    "Text",
    "CharacterData",
    "Performance",
    "Window",
]

[dev-dependencies]
stderrlog = "0.4"
rand = "0.6"
failure = "0.1"
structopt = "0.2"
wasm-bindgen-test = "0.2.33"
cfg-if = "0.1.7"



[features]
with-tui = ["itui/termion", "termion"]
with-html = ["sauron", "web-sys", "wasm-bindgen", "console_log"]
with-gtk = ["gtk", "gio", "glib", "gdk-pixbuf"]
with-nwg = ["native-windows-gui"]
with-titik = ["titik"]

[workspace]
members = [
    "examples/cross_widget",
    "examples/todomvc",
    "examples/win_ui",
    "crates/itui",
]


