[package]
name = "sauron-native"
version = "0.1.0"
authors = [ "Jovansonlee Cesar <ivanceras@gmail.com>" ]
license = "MIT"
description = "Truly native, truly cross platform GUI framework for rust"
repository = "https://github.com/ivanceras/sauron-native"
documentation = "https://docs.rs/sauron-native"
readme = "README.md"
keywords = ["gui", "native", "gtk", "windows"]
edition = "2018"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
sauron = { version = "0.25", optional = true, path = "../sauron" }
sauron_vdom = { version = "0.25", path = "../sauron/crates/sauron_vdom" }
termion = { version = "1.5", optional= true }
wasm-bindgen = { version = "0.2.42", optional = true }
gtk = { version = "0.8.0", optional = true }
gio = { version = "0.8.0", optional = true }
glib = { version = "0.9.0", optional = true }
gdk-pixbuf = { version = "0.8.0", optional = true }
log = "0.4"
base64 = "0.11.0"
image = "0.23.0"
console_log = { version = "0.1.2", optional = true }
native-windows-gui = { git = "https://github.com/gabdube/native-windows-gui", rev="3011830", optional = true , features = ["all"]}
titik = { path = "../titik", optional = true }
resvg = { version = "0.9.0", features = ["raqote-backend"], optional = true }

[dependencies.web-sys]
version = "0.3.19"
optional = true
features = [
    "Comment",
    "console",
    "Document",
    "Element",
    "Event",
    "HtmlElement",
    "EventTarget",
    "KeyboardEvent",
    "InputEvent",
    "HtmlCollection",
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "MouseEvent",
    "Node",
    "NodeList",
    "Text",
    "CharacterData",
    "Performance",
    "Window",
]

[dev-dependencies]
stderrlog = "0.4"
rand = "0.6"
failure = "0.1"
structopt = "0.2"
wasm-bindgen-test = "0.2.33"
cfg-if = "0.1.7"



[features]
with-html = ["sauron", "web-sys", "wasm-bindgen", "console_log"]
#v3_22 is needed for set_monospace
with-gtk = ["gtk/v3_22", "gio", "glib", "gdk-pixbuf"]
with-nwg = ["native-windows-gui", "resvg"]
with-titik = ["titik"]

[workspace]
members = [
    "examples/cross_widget",
    "examples/simple",
]


