[package]
name = "sauron-native"
version = "0.2.0"
authors = [ "Jovansonlee Cesar <ivanceras@gmail.com>" ]
license = "MIT"
description = "Truly native, truly cross platform GUI framework for rust"
repository = "https://github.com/ivanceras/sauron-native"
documentation = "https://docs.rs/sauron-native"
readme = "README.md"
keywords = ["gui", "native", "gtk", "windows"]
edition = "2018"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
sauron = { version = "0.32", path = "../sauron", optional = true }
mt-dom = { version = "0.5", path = "../mt-dom" }
stretch = "0.3"
termion = { version = "1.5", optional= true }
wasm-bindgen = { version = "0.2", optional = true }
gtk = { version = "0.8", optional = true }
gdk = { version = "0.12", optional = true }
gio = { version = "0.8", optional = true }
glib = { version = "0.9", optional = true }
gdk-pixbuf = { version = "0.8", optional = true }
log = "0.4"
base64 = "0.11"
image = "0.23"
console_log = { version = "0.1", optional = true }
#native-windows-gui = { git = "https://github.com/gabdube/native-windows-gui", rev="3011830", optional = true , features = ["all"]}
native-windows-gui = { path = "../native-windows-gui/native-windows-gui", optional = true, features = ["flexbox", "rich-textbox", "image-decoder", "textbox", "frame"] }
titik = { version = "0.2", optional = true }
resvg = { version = "0.9", features = ["raqote-backend"], optional = true }

[dependencies.web-sys]
version = "0.3"
optional = true
features = [
    "Comment",
    "console",
    "Document",
    "Element",
    "Event",
    "HtmlElement",
    "EventTarget",
    "KeyboardEvent",
    "InputEvent",
    "HtmlCollection",
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "MouseEvent",
    "Node",
    "NodeList",
    "Text",
    "CharacterData",
    "Performance",
    "Window",
]

[dev-dependencies]
stderrlog = "0.4"
rand = "0.6"
failure = "0.1"
structopt = "0.2"
wasm-bindgen-test = "0.2"
cfg-if = "0.1"



[features]
with-html = ["sauron", "web-sys", "wasm-bindgen", "console_log"]
#v3_22 is needed for set_monospace
with-gtk = ["gtk/v3_22", "gio", "glib", "gdk", "gdk-pixbuf"]
with-nwg = ["native-windows-gui", "resvg"]
with-titik = ["titik"]
with-debug = ["sauron/with-nodeidx-debug", "sauron/with-debug"]

[workspace]
members = [
    "examples/cross_widget",
    "examples/simple",
    "examples/todomvc",
]


[patch.crates-io]
sauron = { path = "../sauron" }
mt-dom = { path = "../mt-dom" }
stretch = { path = "../stretch" }
titik = {path = "../titik" }
native-windows-gui = { path = "../native-windows-gui/native-windows-gui" }
