[package]
name = "ui-backend"
version = "0.1.0"
edition = "2018"

[dependencies]
js-sys = "0.3"
vdom = { path = "../vdom" }
maplit = "1.0.1"
wasm-bindgen = "0.2.40"
lazy_static = "1.0"


[dependencies.web-sys]
version = "0.3"
features = [
    "Comment",
    "Document",
    "Element",
    "HtmlElement",
    "EventTarget",
    "HtmlCollection",
    "Node",
    "NodeList",
    "Text",
    "CharacterData",
    "Window",
]
