[package]
name = "cross_widget"
version = "0.1.0"
authors = ["lee"]
edition = "2018"

[lib]
crate-type = ["cdylib"]


[dependencies]
sauron = { version = "0.25" }
sauron-native = { version = "0.2.0"}
wasm-bindgen = "0.2.40"
titik = { version = "0.2.0", optional = true }
log = "0.4"
console_log = { version = "0.1.2", optional = true }
pretty_env_logger = "0.3.1"


[features]
with-html = ["sauron-native/with-html", "console_log"]
with-titik = ["sauron-native/with-titik"]
with-gtk = ["sauron-native/with-gtk"]
with-nwg = ["sauron-native/with-nwg"]

