
[package]
name = "todomvc"
version = "0.1.0"
authors = [ "Jovansonlee Cesar <ivanceras@gmail.com>" ]
license = "MIT"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
sauron = "0.10.0"
sauron-native = { path = "../../" }
wasm-bindgen = "0.2.42"

[features]
with-html = ["sauron-native/with-html"]
with-tui = ["sauron-native/with-tui"]
with-gtk = ["sauron-native/with-gtk"]


