[package]
name = "win_ui"
version = "0.1.0"
authors = ["lee"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.0"
native-windows-gui = { features = ["image-decoder"], git = "https://github.com/gabdube/native-windows-gui", branch = "1.0-prerelease" }
